--- a/CinemaUDEA/web/resources/css/base.css
+++ b/CinemaUDEA/web/resources/css/base.css
@@ -14,16 +14,56 @@
     font-style: normal;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
-	font-family: 'Source';
-	margin: 0;
-	padding: 0;
-	color: #575757;
+    font-family: 'Source';
+    margin: 0;
+    padding: 0;
+    color: #575757;
+    padding: 20px;
+    background: url('../images/logo_udea.png') no-repeat bottom -26px right 15px;
 }
 
 a {
     text-decoration: none;
 }
+
+h1.pagetitle {
+    margin: 0 0 0 25px;
+}
+
+.menu_ppal {
+    width: 100%;
+}
+
+.menu_ppal td {
+    width: 33%;
+    vertical-align: top;
+}
+
+    .menu_ppal .menu_item {
+        display: block;
+        padding: 10px;
+        border: solid 1px #575757;
+    }
+        
+        .menu_ppal .menu_item h2 {
+            margin-top: 0;
+        }
+    
+        .menu_ppal .menu_item a {
+            display: block;
+            padding: 10px;
+            background: #575757;
+            color: #FFFFFF;
+        }
+        
+        .menu_ppal .menu_item a:hover {
+            background: #1B6432;
+        }
 
 .small_number {
     width: 30px;
