--- a/CinemaUDEA/web/resources/css/jsfcrud.css
+++ b/CinemaUDEA/web/resources/css/jsfcrud.css
@@ -3,7 +3,8 @@
 }
 .ui-layout-north {
     z-index: 20 !important;
-    overflow: visible !important;;
+    overflow: visible !important;
+    margin-bottom: 15px;
 }
 .ui-layout-north .ui-layout-unit-content {
     overflow: visible !important;
